Project1VS/force-app/main/default/objects/User/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&quot;AAA-not you&quot;</defaultValue>
    <label>First Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>