Project1VS/force-app/main/default/objects/User/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>