Project1VS/force-app/main/default/objects/User/fields/Programming_Languages__c.field-meta.xml
<CustomField>
    <fullName>Programming_Languages__c</fullName>
    <label>Programming Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>