Project1VS/force-app/main/default/objects/User/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <defaultValue>&quot;AAA-not you&quot;</defaultValue>
    <label>User Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>